# CCLF_TWIST

./: .gitignore  CCLF_TWIST_pipeline.wdl  CCLF_processing.py  CCLF_processing_old.py  README.md  Untitled.ipynb  description_of_getData.md  dict_pairs_per_batch.npy  firecloud_sugar.py  pipeline trial.ipynb  pipeline.ipynb  pipeline.py  prepare_data_for_fc_export.py  pyproject.toml  requirements.txt  run.py  share.py  upload_bams_to_fc.py  utils.ipynb
data/sample_infos/: CCLF_TWIST10_CCLF_TWIST11_CCLF_TWIST12_sample_info.tsv  CCLF_TWIST15_CCLF_TWIST16_sample_info.tsv  CCLF_TWIST17_sample_info.tsv  CCLF_TWIST1_CCLF_TWIST2_CCLF_TWIST3_CCLF_TWIST4_CCLF_TWIST5_sample_info.tsv  CCLF_TWIST1_sample_info.tsv  CCLF_TWIST35_sample_info.tsv  CCLF_TWIST36_sample_info.tsv  CCLF_TWIST38_sample_info.tsv  CCLF_TWIST39_sample_info.tsv  CCLF_TWIST40_REDO_sample_info.tsv  CCLF_TWIST41_sample_info.tsv  CCLF_TWIST42_sample_info.tsv  CCLF_TWIST43_sample_info.tsv  CCLF_TWIST44_sample_info.tsv  CCLF_TWIST45_sample_info.tsv  CCLF_TWIST46_sample_info.tsv  CCLF_TWIST47_sample_info.tsv  CCLF_TWIST48_sample_info.tsv  (+16 more)
save_twist_terra_workspace/: pair_up_to_twist1.tsv  sample_up_to_twist1.tsv
src/: FNG_TWIST_and_TSCA_merge.Rmd  helper.py  load_libraries_and_annotations.R
tasks/: CCLF comparison.ipynb  CCLF_report_per_cell_line.ipynb  CCLF_report_per_participant_template.ipynb  CCLF_report_template-no-mutation-summary.ipynb  CCLF_report_template.html  CCLF_report_template.ipynb  utils.ipynb
temp/: inputs.json
workflows/: PlotSomaticCNVMaps.wdl  cclf_qc_pipeline.wdl  merge_fng_databases.wdl
(+41 files in other folders)
